--- a/jsconfig.json
+++ b/jsconfig.json
@@ -2,6 +2,9 @@
     "compilerOptions": {
         "target": "ES6"
     },
+    "files": [
+        "chronologic.js",
+    ],
     "exclude": [
         "node_modules",
         "**/node_modules/*"
