--- a/jsconfig.json
+++ b/jsconfig.json
@@ -3,7 +3,7 @@
         "target": "ES6"
     },
     "files": [
-        "chronologic.js",
+        "chronologic.js"
     ],
     "exclude": [
         "node_modules",
