added rxjs concept to the library to watch for changes in either date, format or options

--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
   },
   "homepage": "https://github.com/bargross/chronologic#readme",
   "dependencies": {
-    "jasmine": "^3.5.0"
+    "jasmine": "^3.5.0",
+    "rxjs": "^6.5.4"
   },
   "devDependencies": {}
 }
