--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,10 @@
 {
     "workbench.colorTheme": "Solarized Dark",
+    "editor.minimap.enabled": false,
+    "path-autocomplete.includeExtension": true,
+    "path-autocomplete.useBackslash": true,
+    "javascript.updateImportsOnFileMove.enabled": "always",
+    "javascript.suggest.completeJSDocs": true,
+    "javascript.preferences.quoteStyle": "single",
+    "editor.showUnused":  true
 }
