--- a/jsconfig.json
+++ b/jsconfig.json
@@ -1,10 +1,8 @@
 {
     "compilerOptions": {
+        "module":"commonJS",
         "target": "ES6"
     },
-    "files": [
-        "chronologic.js"
-    ],
     "exclude": [
         "node_modules",
         "**/node_modules/*"
